--- a/code/preprocessing-stations.ipynb
+++ b/code/preprocessing-stations.ipynb
@@ -349,6 +349,16 @@
    "source": [
     "df.to_csv('datos/estaciones.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc5d53fc-550b-41d2-a82a-332924581f5c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_excel('datos/estaciones.x', index = None, header=True)"
+   ]
   }
  ],
  "metadata": {
