estaciones y request de ciclovias

--- a/code/preprocessing-stations.ipynb
+++ b/code/preprocessing-stations.ipynb
@@ -28,6 +28,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 97,
+   "id": "35d49272-3a04-4215-b61a-272dfd2ad85a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.get('https://www.mibicitubici.gob.ar/v1/bikeways')\n",
+    "ciclovias = json.loads(response.text)['data']['bikeways']\n",
+    "\n",
+    "with open('ciclovias.json', 'w') as outfile:\n",
+    "    json.dump(ciclovias, outfile)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 73,
    "id": "687f7a94-fb46-4e23-b8ad-a47c9d250193",
    "metadata": {},
@@ -59,6 +73,34 @@
     "with open(\"estaciones.json\", \"r\") as file:\n",
     "    estaciones = json.load(file)\n",
     "estaciones[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "b9661939-9571-4076-aa2b-d365c76455e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'id': 2,\n",
+       " 'name': 'Bordavere (entre Avellaneda y Salta)',\n",
+       " 'origin': {'name': None, 'latitude': '-32.933594', 'longitude': '-60.677809'},\n",
+       " 'destination': {'name': None,\n",
+       "  'latitude': '-32.933322',\n",
+       "  'longitude': '-60.670600'}}"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open('ciclovias.json', 'r') as file:\n",
+    "    ciclovias = json.load(file)\n",
+    "ciclovias[0]"
    ]
   },
   {
@@ -347,17 +389,157 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('datos/estaciones.csv', index=False)"
+    "df.to_csv('datos/estaciones.csv', index=False)\n",
+    "df.to_excel('datos/estaciones.xlsx', index = None, header=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce6681a3-650c-4023-86d8-0ea5e882e9af",
+   "metadata": {},
+   "source": [
+    "# Ciclovías"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "id": "fc5d53fc-550b-41d2-a82a-332924581f5c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_excel('datos/estaciones.x', index = None, header=True)"
+    "origin_lat = [float(ciclovia['origin']['latitude']) for ciclovia in ciclovias]\n",
+    "origin_lon = [float(ciclovia['origin']['longitude']) for ciclovia in ciclovias]\n",
+    "destination_lat = [float(ciclovia['destination']['latitude']) for ciclovia in ciclovias]\n",
+    "destination_lon = [float(ciclovia['destination']['longitude']) for ciclovia in ciclovias]\n",
+    "ciclovias_df = pd.DataFrame(ciclovias)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "73127739-4313-4b35-bd1b-9e74d8dbdf6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>origin_lat</th>\n",
+       "      <th>origin_lon</th>\n",
+       "      <th>destination_lat</th>\n",
+       "      <th>destination_lon</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Bordavere (entre Avellaneda y Salta)</td>\n",
+       "      <td>-32.933594</td>\n",
+       "      <td>-60.677809</td>\n",
+       "      <td>-32.933322</td>\n",
+       "      <td>-60.670600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Avellaneda (entre San Lorenzo y Pte. Perón)</td>\n",
+       "      <td>-32.936786</td>\n",
+       "      <td>-60.678624</td>\n",
+       "      <td>-32.957553</td>\n",
+       "      <td>-60.683857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Av. Pellegrini (entre Balcarce y Necochea)</td>\n",
+       "      <td>-32.949930</td>\n",
+       "      <td>-60.681846</td>\n",
+       "      <td>-32.959731</td>\n",
+       "      <td>-60.626918</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Entre Ríos (entre Jujuy y Bv. Seguí)</td>\n",
+       "      <td>-32.937811</td>\n",
+       "      <td>-60.638890</td>\n",
+       "      <td>-32.978416</td>\n",
+       "      <td>-60.649098</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Corrientes (entre Jujuy y Bv. 27 de Febrero)</td>\n",
+       "      <td>-32.937534</td>\n",
+       "      <td>-60.640281</td>\n",
+       "      <td>-32.966694</td>\n",
+       "      <td>-60.647604</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id                                          name  origin_lat  origin_lon  \\\n",
+       "0   2          Bordavere (entre Avellaneda y Salta)  -32.933594  -60.677809   \n",
+       "1   3   Avellaneda (entre San Lorenzo y Pte. Perón)  -32.936786  -60.678624   \n",
+       "2   4    Av. Pellegrini (entre Balcarce y Necochea)  -32.949930  -60.681846   \n",
+       "3   5          Entre Ríos (entre Jujuy y Bv. Seguí)  -32.937811  -60.638890   \n",
+       "4   6  Corrientes (entre Jujuy y Bv. 27 de Febrero)  -32.937534  -60.640281   \n",
+       "\n",
+       "   destination_lat  destination_lon  \n",
+       "0       -32.933322       -60.670600  \n",
+       "1       -32.957553       -60.683857  \n",
+       "2       -32.959731       -60.626918  \n",
+       "3       -32.978416       -60.649098  \n",
+       "4       -32.966694       -60.647604  "
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ciclovias_df = pd.DataFrame(ciclovias)\n",
+    "ciclovias_df.drop(['origin', 'destination'], axis='columns', inplace=True)\n",
+    "ciclovias_df['origin_lat'] = origin_lat\n",
+    "ciclovias_df['origin_lon'] = origin_lon\n",
+    "ciclovias_df['destination_lat'] = destination_lat\n",
+    "ciclovias_df['destination_lon'] = destination_lon\n",
+    "ciclovias_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "c172dfe1-2ad2-4452-8ad9-f29312555d4f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ciclovias_df.to_csv('datos/ciclovias.csv', index=False)\n",
+    "ciclovias_df.to_excel('datos/ciclovias.xlsx', index = None, header=True)"
    ]
   }
  ],
