--- a/code/preprocessing-stations.ipynb
+++ b/code/preprocessing-stations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 2,
    "id": "898115c7-66e4-4be0-966f-68aaafc2859e",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 5,
    "id": "2723c937-9b14-4d38-9398-c46e028efa7f",
    "metadata": {},
    "outputs": [],
@@ -28,45 +28,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
-   "id": "35d49272-3a04-4215-b61a-272dfd2ad85a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "response = requests.get('https://www.mibicitubici.gob.ar/v1/bikeways')\n",
-    "ciclovias = json.loads(response.text)['data']['bikeways']\n",
-    "\n",
-    "with open('ciclovias.json', 'w') as outfile:\n",
-    "    json.dump(ciclovias, outfile)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 3,
    "id": "687f7a94-fb46-4e23-b8ad-a47c9d250193",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'id': 1,\n",
-       " 'name': 'Museo Castagnino',\n",
-       " 'address': 'Oroño 1658',\n",
-       " 'station_code': 1,\n",
-       " 'status': 'active',\n",
-       " 'last_connection_date': 1628786984,\n",
-       " 'location': {'name': None,\n",
-       "  'latitude': '-32.95421439665977',\n",
-       "  'longitude': '-60.655986964702606'},\n",
-       " 'favorite': False,\n",
-       " 'tandem': 0,\n",
-       " 'anchor': 15,\n",
-       " 'bikes': 5}"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'estaciones.json'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-36882a564893>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"estaciones.json\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"r\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mfile\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0mestaciones\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mestaciones\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'estaciones.json'"
+     ]
     }
    ],
    "source": [
@@ -77,35 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
-   "id": "b9661939-9571-4076-aa2b-d365c76455e1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'id': 2,\n",
-       " 'name': 'Bordavere (entre Avellaneda y Salta)',\n",
-       " 'origin': {'name': None, 'latitude': '-32.933594', 'longitude': '-60.677809'},\n",
-       " 'destination': {'name': None,\n",
-       "  'latitude': '-32.933322',\n",
-       "  'longitude': '-60.670600'}}"
-      ]
-     },
-     "execution_count": 99,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "with open('ciclovias.json', 'r') as file:\n",
-    "    ciclovias = json.load(file)\n",
-    "ciclovias[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 7,
    "id": "ae43f94f-022d-494e-91fb-703e4b7d6963",
    "metadata": {},
    "outputs": [],
@@ -116,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 9,
    "id": "86104521-d266-49db-ad90-113194e9a3df",
    "metadata": {},
    "outputs": [
@@ -163,11 +110,11 @@
        "      <td>Oroño 1658</td>\n",
        "      <td>1</td>\n",
        "      <td>active</td>\n",
-       "      <td>1628786984</td>\n",
+       "      <td>1632252091</td>\n",
        "      <td>False</td>\n",
        "      <td>0</td>\n",
-       "      <td>15</td>\n",
-       "      <td>5</td>\n",
+       "      <td>13</td>\n",
+       "      <td>7</td>\n",
        "      <td>-32.954214</td>\n",
        "      <td>-60.655987</td>\n",
        "    </tr>\n",
@@ -178,11 +125,11 @@
        "      <td>Av. Pellegrini 1377</td>\n",
        "      <td>2</td>\n",
        "      <td>active</td>\n",
-       "      <td>1628786975</td>\n",
+       "      <td>1632252101</td>\n",
        "      <td>False</td>\n",
        "      <td>0</td>\n",
-       "      <td>16</td>\n",
-       "      <td>4</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0</td>\n",
        "      <td>-32.956663</td>\n",
        "      <td>-60.644869</td>\n",
        "    </tr>\n",
@@ -193,11 +140,11 @@
        "      <td>Pellegrini  779</td>\n",
        "      <td>3</td>\n",
        "      <td>active</td>\n",
-       "      <td>1628786997</td>\n",
+       "      <td>1632252099</td>\n",
        "      <td>False</td>\n",
-       "      <td>0</td>\n",
-       "      <td>19</td>\n",
        "      <td>1</td>\n",
+       "      <td>15</td>\n",
+       "      <td>5</td>\n",
        "      <td>-32.958121</td>\n",
        "      <td>-60.636702</td>\n",
        "    </tr>\n",
@@ -208,11 +155,11 @@
        "      <td>Av. Pellegrini 280</td>\n",
        "      <td>4</td>\n",
        "      <td>active</td>\n",
-       "      <td>1628786988</td>\n",
+       "      <td>1632252099</td>\n",
        "      <td>False</td>\n",
-       "      <td>3</td>\n",
-       "      <td>11</td>\n",
-       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12</td>\n",
+       "      <td>8</td>\n",
        "      <td>-32.959215</td>\n",
        "      <td>-60.629449</td>\n",
        "    </tr>\n",
@@ -223,153 +170,35 @@
        "      <td>Riobamba 239 BIS</td>\n",
        "      <td>5</td>\n",
        "      <td>active</td>\n",
-       "      <td>1628786971</td>\n",
+       "      <td>1632252108</td>\n",
        "      <td>False</td>\n",
        "      <td>0</td>\n",
-       "      <td>12</td>\n",
-       "      <td>9</td>\n",
+       "      <td>14</td>\n",
+       "      <td>7</td>\n",
        "      <td>-32.967366</td>\n",
        "      <td>-60.623572</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>65</th>\n",
-       "      <td>76</td>\n",
-       "      <td>Mendoza y Magallanes</td>\n",
-       "      <td>Mendoza 6043</td>\n",
-       "      <td>66</td>\n",
-       "      <td>active</td>\n",
-       "      <td>1628786984</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2</td>\n",
-       "      <td>12</td>\n",
-       "      <td>8</td>\n",
-       "      <td>-32.940079</td>\n",
-       "      <td>-60.705073</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>66</th>\n",
-       "      <td>77</td>\n",
-       "      <td>Cuatro Plazas</td>\n",
-       "      <td>Mendoza 6591</td>\n",
-       "      <td>67</td>\n",
-       "      <td>active</td>\n",
-       "      <td>1628786996</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0</td>\n",
-       "      <td>16</td>\n",
-       "      <td>4</td>\n",
-       "      <td>-32.940247</td>\n",
-       "      <td>-60.711147</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>67</th>\n",
-       "      <td>78</td>\n",
-       "      <td>Provincias Unidas y Eva Perón</td>\n",
-       "      <td>Av. Provincias Unidas 410</td>\n",
-       "      <td>68</td>\n",
-       "      <td>active</td>\n",
-       "      <td>1628786992</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0</td>\n",
-       "      <td>13</td>\n",
-       "      <td>7</td>\n",
-       "      <td>-32.933226</td>\n",
-       "      <td>-60.713076</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>68</th>\n",
-       "      <td>82</td>\n",
-       "      <td>Distrito Noroeste</td>\n",
-       "      <td>Av. Provincias Unidas 150 bis</td>\n",
-       "      <td>69</td>\n",
-       "      <td>active</td>\n",
-       "      <td>1628786977</td>\n",
-       "      <td>False</td>\n",
-       "      <td>1</td>\n",
-       "      <td>11</td>\n",
-       "      <td>9</td>\n",
-       "      <td>-32.928205</td>\n",
-       "      <td>-60.712881</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>69</th>\n",
-       "      <td>85</td>\n",
-       "      <td>Costa Alta</td>\n",
-       "      <td>Av. Eudoro Carrasco 4217</td>\n",
-       "      <td>72</td>\n",
-       "      <td>active</td>\n",
-       "      <td>1628786998</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7</td>\n",
-       "      <td>13</td>\n",
-       "      <td>-32.873641</td>\n",
-       "      <td>-60.689076</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>70 rows × 12 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    id                           name                        address  \\\n",
-       "0    1               Museo Castagnino                     Oroño 1658   \n",
-       "1    2               Paseo Pellegrini            Av. Pellegrini 1377   \n",
-       "2    3                    Plaza López                Pellegrini  779   \n",
-       "3    4             Fac. de Ingeniería             Av. Pellegrini 280   \n",
-       "4    5                 Ciudad Univ. I               Riobamba 239 BIS   \n",
-       "..  ..                            ...                            ...   \n",
-       "65  76           Mendoza y Magallanes                   Mendoza 6043   \n",
-       "66  77                  Cuatro Plazas                   Mendoza 6591   \n",
-       "67  78  Provincias Unidas y Eva Perón      Av. Provincias Unidas 410   \n",
-       "68  82              Distrito Noroeste  Av. Provincias Unidas 150 bis   \n",
-       "69  85                     Costa Alta       Av. Eudoro Carrasco 4217   \n",
+       "   id                name              address  station_code  status  \\\n",
+       "0   1    Museo Castagnino           Oroño 1658             1  active   \n",
+       "1   2    Paseo Pellegrini  Av. Pellegrini 1377             2  active   \n",
+       "2   3         Plaza López      Pellegrini  779             3  active   \n",
+       "3   4  Fac. de Ingeniería   Av. Pellegrini 280             4  active   \n",
+       "4   5      Ciudad Univ. I     Riobamba 239 BIS             5  active   \n",
        "\n",
-       "    station_code  status  last_connection_date  favorite  tandem  anchor  \\\n",
-       "0              1  active            1628786984     False       0      15   \n",
-       "1              2  active            1628786975     False       0      16   \n",
-       "2              3  active            1628786997     False       0      19   \n",
-       "3              4  active            1628786988     False       3      11   \n",
-       "4              5  active            1628786971     False       0      12   \n",
-       "..           ...     ...                   ...       ...     ...     ...   \n",
-       "65            66  active            1628786984     False       2      12   \n",
-       "66            67  active            1628786996     False       0      16   \n",
-       "67            68  active            1628786992     False       0      13   \n",
-       "68            69  active            1628786977     False       1      11   \n",
-       "69            72  active            1628786998     False       0       7   \n",
-       "\n",
-       "    bikes   latitude  longitude  \n",
-       "0       5 -32.954214 -60.655987  \n",
-       "1       4 -32.956663 -60.644869  \n",
-       "2       1 -32.958121 -60.636702  \n",
-       "3       9 -32.959215 -60.629449  \n",
-       "4       9 -32.967366 -60.623572  \n",
-       "..    ...        ...        ...  \n",
-       "65      8 -32.940079 -60.705073  \n",
-       "66      4 -32.940247 -60.711147  \n",
-       "67      7 -32.933226 -60.713076  \n",
-       "68      9 -32.928205 -60.712881  \n",
-       "69     13 -32.873641 -60.689076  \n",
-       "\n",
-       "[70 rows x 12 columns]"
+       "   last_connection_date  favorite  tandem  anchor  bikes   latitude  longitude  \n",
+       "0            1632252091     False       0      13      7 -32.954214 -60.655987  \n",
+       "1            1632252101     False       0      20      0 -32.956663 -60.644869  \n",
+       "2            1632252099     False       1      15      5 -32.958121 -60.636702  \n",
+       "3            1632252099     False       1      12      8 -32.959215 -60.629449  \n",
+       "4            1632252108     False       0      14      7 -32.967366 -60.623572  "
       ]
      },
-     "execution_count": 86,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,13 +213,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 12,
    "id": "72594f01-6f26-408b-9459-bd305924309a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('datos/estaciones.csv', index=False)\n",
-    "df.to_excel('datos/estaciones.xlsx', index = None, header=True)"
+    "df.iloc[:2, :].to_csv('../datos/geo/estaciones-test.csv', index=False)\n",
+    "df.iloc[:2, :].to_excel('../datos/geo/estaciones-test.xlsx', index = None, header=True)"
    ]
   },
   {
