probando parameters variation

--- a/code/parameters-generation.ipynb
+++ b/code/parameters-generation.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 145,
    "id": "fda35625-9f3a-4c2b-ac52-aa98630c86e7",
    "metadata": {},
    "outputs": [
@@ -139,7 +139,7 @@
     "fig, ax = plt.subplots(figsize=(20, 8))\n",
     "ax = sns.heatmap(parameters_df)\n",
     "fig.savefig('../datos/station-parameters-heatmap.pdf')\n",
-    "parameters_df.to_csv('../datos/parameters-table.')"
+    "parameters_df.to_excel('../datos/parameters-table.xlsx')"
    ]
   },
   {
